Amends build to use main - might change later to master

--- a/build.yaml
+++ b/build.yaml
@@ -1,12 +1,12 @@
 trigger:
   branches:
     include:
-    - master
+    - main
 resources:
   repositories:
   - repository: self
     type: git
-    ref: master
+    ref: main
 jobs:
 - job: Job_1
   displayName: Agent job 1
