--- a/azure-devops/app/build.yaml
+++ b/azure-devops/app/build.yaml
@@ -25,7 +25,7 @@ jobs:
       displayName: 'Publish'
       inputs:
         command: publish
-        publishWebProjects: True
+        publishWebProjects: False
         projects: $(ProjectPath)
         arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
         zipAfterPublish: True
