--- a/azure-devops/app/build.yaml
+++ b/azure-devops/app/build.yaml
@@ -33,7 +33,7 @@ jobs:
     - task: PublishBuildArtifacts@1
       displayName: 'Publish'
       inputs:
-        pathtoPublish: '$(Build.ArtifactStagingDirectory)/viewer.zip'
+        pathtoPublish: '$(Build.ArtifactStagingDirectory)'
         artifactName: 'viewer'
       condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
 ...
