--- a/azure-devops/app/build.yaml
+++ b/azure-devops/app/build.yaml
@@ -9,9 +9,9 @@ variables:
 
 jobs:
 - job: 'Default'
-  displayName: Agent job 1
+  displayName: 'Agent job 1'
   pool:
-    vmImage: ubuntu-20.04
+    vmImage: 'ubuntu-18.04'
 
   steps:
     - task: DotNetCoreCLI@2
@@ -35,5 +35,6 @@ jobs:
       inputs:
         pathtoPublish: '$(Build.ArtifactStagingDirectory)'
         artifactName: 'viewer'
+        publishLocation: 'Container'
       condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
 ...
