Possible path problems with /*

--- a/azure-devops/app/build.yaml
+++ b/azure-devops/app/build.yaml
@@ -4,8 +4,8 @@ trigger:
     - main
   paths:
     exclude:
-    - azure-devops/infra/*
-    - infrastructure/*
+    - azure-devops/infra
+    - infrastructure
     include:
     - azure-devops/app/*
     - viewer/*
