So maybe paths do have to be relative to the yaml files then

--- a/azure-devops/app/build.yaml
+++ b/azure-devops/app/build.yaml
@@ -4,11 +4,11 @@ trigger:
     - main
   paths:
     exclude:
-    - azure-devops/infra
-    - infrastructure
+    - ../infra
+    - ../../infrastructure
     include:
-    - azure-devops/app/*
-    - viewer/*
+    - ../app/*
+    - ../../viewer/*
 
 variables:
   BuildConfiguration: 'Release'
