--- a/azure-devops/app/build.yaml
+++ b/azure-devops/app/build.yaml
@@ -7,8 +7,8 @@ trigger:
     - ../infra
     - ../../infrastructure
     include:
-    - ../app/*
-    - ../../viewer/*
+    - ../app
+    - ../../viewer
 
 variables:
   BuildConfiguration: 'Release'
