Perhaps we don't need include as well as exclude

--- a/azure-devops/infra/build.yaml
+++ b/azure-devops/infra/build.yaml
@@ -6,9 +6,9 @@ trigger:
     exclude:
     - ../app/*
     - ../../viewer/*
-    include:
-    - ../infra/*
-    - ../../infrastructure/*
+    # include:
+    # - /
+    # - ../../infrastructure/*
 
 jobs:
 - job: 'Default'
