--- a/azure-devops/infra/build.yaml
+++ b/azure-devops/infra/build.yaml
@@ -17,7 +17,7 @@ jobs:
   - task: CopyFiles@2
     displayName: Copy Files
     inputs:
-      Contents: 'infrastructure/*.json'
+      Contents: 'infrastructure/*.*'
       TargetFolder: $(build.ArtifactStagingDirectory)
   
   - task: PublishBuildArtifacts@1
