Hopefully the trigger will now work as expected

--- a/azure-devops/infra/build.yaml
+++ b/azure-devops/infra/build.yaml
@@ -4,8 +4,8 @@ trigger:
     - main
   paths:
     exclude:
-    - ../app/*
-    - ../../viewer/*
+    - ../app
+    - ../../viewer
 
 jobs:
 - job: 'Default'
