Probably should have committed this first...

--- a/azure-devops/app/build.yaml
+++ b/azure-devops/app/build.yaml
@@ -4,8 +4,8 @@ trigger:
     - main
   paths:
     exclude:
-    - ../infra/*
-    - ../../infrastructure/*
+    - ../infra
+    - ../../infrastructure
 
 variables:
   BuildConfiguration: 'Release'
