Moved build files

--- a/app-build.yaml
+++ b/app-build.yaml
@@ -3,9 +3,8 @@ trigger:
     include:
     - main
   paths:
-    exclude:
-    - ../infra
-    - ../../infrastructure
+    include:
+    - viewer/*
 
 variables:
   BuildConfiguration: 'Release'
