--- a/viewer/app-build.yaml
+++ b/viewer/app-build.yaml
@@ -30,7 +30,7 @@ jobs:
         command: publish
         publishWebProjects: False
         projects: $(ProjectPath)
-        arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory/app)'
+        arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)/app'
         zipAfterPublish: True
         
     - task: PublishBuildArtifacts@1
